    _it_std_message + ajout des commandes permettant de lancer chromium
    avec/sans prise en charge du proxy
  * [DEV] Commit -- 07/12/2016 @ 16:04:03
  * [DEV] Commit -- 08/12/2016 @ 17:44:28
  * [DEV] Suppression de tout ce qui est en relation avec les
    navigateurs web
  * [DEV] Corrections postfix
  * [DEV] Commit -- 12/12/2016 @ 08:43:50
  * [DEV] Commit -- 12/12/2016 @ 11:40:24
  * [DEV] Refactoring commandes postfix
  * [DEV] Commit -- 13/12/2016 @ 09:34:46
  * [DEV] Commit -- 14/12/2016 @ 10:54:36
  * [DEV] Ajout de .local et de .inist.fr au no_proxy suite aux
    recommandations de Sylvain
  * [DEV] Màj doc sur la conf des navigateurs
  * [DEV] Implémentation de la commande 'inist desktop'
  * [DEV] Implémentation de la commande 'inist desktop' #2
  * [DEV] Harmonisation des no_proxy, ajout desktop dans 'inist status',
    ajout autocomplete pour 'inist deskt..', suppression de
    l'autocomplete pour les navigateurs
  * [DEV] Activation inist desktop quand inist on / amélioration des
    messages postfix
  * [DEV] Premier jet de la doc pour les plugins de navigateurs
  * [DEV] Ajout du fichier man pour inist-tools
  * [DEV] Commit -- 29/12/2016 @ 11:07:38
  * [DEV] Ajout d'une info sur les services activés/désactivés au
    lancement d'une nouvelle console
  * [DEV] Prise en charge du proxy ADSL
  * [DEV] Correction screenshot README + màj doc + maà man
  * [DEV] Correction man + ajout 0.0.0.0 dans no_proxy + changement
    intitulé de l'info et du contenu à l'ouverture d'un nouveau shell
  * [DEV] Màj autocomplete
  * [DEV] Ajout de l'info sur le proxy courant à l'ouverture d'un
    nouveau shell
  * [DEV] Corrections autour de la commande postfix
  * [DEV] Commit -- 03/01/2017 @ 13:25:52
  * [DEV] Quelques modifications... pour que ça fonctionne
  * [DEV] Correction sur env_create.sh
  * [DEV] Commit -- 03/01/2017 @ 14:20:06

 -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200