@@ -197,5 +197,6 @@ inist-tools (0.9.11RC) RC; urgency=medium
   * [DEV] Quelques modifications... pour que ça fonctionne
   * [DEV] Correction sur env_create.sh
   * [DEV] Commit -- 03/01/2017 @ 14:20:06
+  * [DEV] Correction liées aux spécificités de Ubuntu 16.04
 
  -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200
